fix(navbar/theme): left and right icon alignment correctedd

--- a/src/navbar/theme.scss
+++ b/src/navbar/theme.scss
@@ -34,6 +34,8 @@
 :local(.rightIcon) {
   margin-top: auto;
   margin-bottom: auto;
+  display: flex;
+  align-items: center;
   cursor: pointer;
   svg {
     max-width: 20px;
